# MiniSQL

./: CMakeLists.txt  README.md  clean.sh
BufferManager/: README.md
CatalogManager/: README.md
IndexManager/: README.md
RecordManager/: README.md
src/: main.cpp  testBM.cpp  testIndex.cpp
src/API/: API.cpp
src/BufferManager/: BufferManager.cpp
src/CatalogManager/: CatalogManager.cpp
src/Include/: API.hpp  BufferManager.hpp  CatalogManager.hpp  IndexManager.hpp  Interpreter.hpp  RecordManager.hpp  Type.hpp
src/IndexManager/: IndexManager.cpp
src/Interpreter/: Interpreter.cpp  test
src/RecordManager/: RecordManager.cpp
tools/: .gitignore  clean.sh  insertGen.cpp  test.txt
